--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "ts-loader": "^6.2.1",
+    "typescript": "^3.8.2",
     "url-loader": "^3.0.0",
     "vue-loader": "^16.0.0-alpha.1",
     "webpack": "^4.41.4",
