--- a/package.json
+++ b/package.json
@@ -5,13 +5,18 @@
     "build": "webpack --env.prod"
   },
   "dependencies": {
+    "axios": "^0.19.2",
+    "tailwindcss": "^1.2.0",
     "vue": "^3.0.0-alpha.8"
   },
   "devDependencies": {
     "@vue/compiler-sfc": "^3.0.0-alpha.8",
+    "autoprefixer": "^9.7.5",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.9.0",
+    "postcss": "^7.0.27",
+    "postcss-loader": "^3.0.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "url-loader": "^3.0.0",
