--- a/package.json
+++ b/package.json
@@ -10,23 +10,24 @@
     "graphql": "^15.0.0",
     "graphql-tag": "^2.10.3",
     "tailwindcss": "^1.4.5",
-    "vue": "^3.0.0-beta.3",
+    "vue": "^3.0.0-beta.14",
     "vue-apollo": "^3.0.0-alpha.3",
     "vuex": "^4.0.0-beta.2"
   },
   "devDependencies": {
-    "@vue/compiler-sfc": "^3.0.0-beta.3",
+    "@vue/compiler-sfc": "^3.0.0-beta.14",
     "autoprefixer": "^9.7.5",
     "css-loader": "^3.4.0",
     "file-loader": "^5.0.2",
     "mini-css-extract-plugin": "^0.9.0",
     "postcss": "^7.0.27",
+    "postcss-import": "^12.0.1",
     "postcss-loader": "^3.0.0",
     "ts-graphql-plugin": "^1.11.0",
     "ts-loader": "^6.2.1",
     "typescript": "^3.8.2",
     "url-loader": "^3.0.0",
-    "vite": "^0.12.0",
+    "vite": "^0.20.7",
     "vue-loader": "^16.0.0-alpha.1",
     "webpack": "^4.41.4",
     "webpack-cli": "^3.3.10",
